--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -2,7 +2,7 @@
 # Additionally a .exe file is being created, downloadable from artifacts
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: Python application
+name: Build Pygame EXE
 
 on:
   push:
@@ -10,37 +10,38 @@ on:
   pull_request:
     branches: [ "main" ]
 
-permissions:
-  contents: read
-
 jobs:
   build:
-
     runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python 3.10
+
+    - name: Set up Python 3.14
       uses: actions/setup-python@v3
       with:
         python-version: "3.14"
+
     - name: Install dependencies
+      shell: powershell
       run: |
         python -m pip install --upgrade pip
         python -m pip install pygame-ce pyinstaller flake8
-        if (Test-Path requirements.txt) { pip install -r requirements.txt }
+        if (Test-Path requirements.txt) { python -m pip install -r requirements.txt }
+
     - name: Lint with flake8
+      shell: powershell
       run: |
-        # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+
     - name: Build EXE with PyInstaller
+      shell: powershell
       run: |
         python -m pyinstaller --onefile --noconsole --icon=assets/icon.ico --add-data "assets;assets" game.py
+
     - name: Upload EXE artifact
       uses: actions/upload-artifact@v4
       with:
         name: game-exe
         path: dist/game.exe
-
