--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -26,7 +26,7 @@ jobs:
       shell: powershell
       run: |
         python -m pip install --upgrade pip
-        python -m pip install pygame-ce pyinstaller flake8
+        python -m pip install pyinstaller pygame-ce flake8
         if (Test-Path requirements.txt) { python -m pip install -r requirements.txt }
 
     - name: Lint with flake8
@@ -34,6 +34,7 @@ jobs:
       run: |
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+
 
     - name: Build EXE with PyInstaller
       shell: powershell
@@ -45,3 +46,4 @@ jobs:
       with:
         name: game-exe
         path: dist/game.exe
+
