--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -34,6 +34,7 @@ jobs:
       shell: bash
 
     - name: Build with PyInstaller
+      shell: bash
       run: |
         if [ "${{ matrix.os }}" == "windows-latest" ]; then
           python -m PyInstaller --onefile --noconsole --icon="assets/icon.ico" --add-data "assets;assets" game.py
