replace icon with ico file

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -37,7 +37,7 @@ jobs:
       shell: bash
       run: |
         if [ "${{ matrix.os }}" == "windows-latest" ]; then
-          python -m PyInstaller --onefile --noconsole --icon="assets/icon.png" --add-data "assets;assets" game.py
+          python -m PyInstaller --onefile --noconsole --icon="assets/icon.ico" --add-data "assets;assets" game.py
         elif [ "${{ matrix.os }}" == "macos-latest" ]; then
           python -m PyInstaller --onefile --noconsole --add-data "assets:assets" game.py
         else
