--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,7 +1,3 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# Additionally a .exe file is being created, downloadable from artifacts
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-
 name: Build Cross-Platform Game
 
 on:
@@ -37,17 +33,16 @@ jobs:
       shell: bash
       run: |
         if [ "${{ matrix.os }}" == "windows-latest" ]; then
-          python -m PyInstaller --onefile --noconsole --icon="assets/icon.ico" --add-data "assets;assets" game.py
+          python -m PyInstaller --onefile --noconsole --icon="assets/icon.ico" --add-data "assets;assets" main.py
         elif [ "${{ matrix.os }}" == "macos-latest" ]; then
-          python -m PyInstaller --onefile --noconsole --add-data "assets:assets" game.py
+          python -m PyInstaller --onefile --noconsole --add-data "assets:assets" main.py
         else
-          python -m PyInstaller --onefile --noconsole --add-data "assets:assets" game.py
+          python -m PyInstaller --onefile --noconsole --add-data "assets:assets" main.py
         fi
 
     - name: Upload Artifacts
       uses: actions/upload-artifact@v4
       with:
-        # create a unique name for each artifact based on the OS
         name: game-${{ matrix.os }}
         path: |
           dist/*.exe
